[gd_scene load_steps=11 format=2]

[ext_resource path="res://ActionBar.tscn" type="PackedScene" id=1]
[ext_resource path="res://Units/Unit.gd" type="Script" id=2]
[ext_resource path="res://assets/sprites/skelly.png" type="Texture" id=3]
[ext_resource path="res://HealthBar.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/sprites/select_ring.png" type="Texture" id=5]
[ext_resource path="res://assets/sprites/drop_shadow.png" type="Texture" id=6]
[ext_resource path="res://Materials/UnitShader.gdshader" type="Shader" id=7]
[ext_resource path="res://themes/in_game_theme.tres" type="Theme" id=8]

[sub_resource type="ShaderMaterial" id=2]
shader = ExtResource( 7 )
shader_param/whiteness = 0.0

[sub_resource type="OccluderPolygon2D" id=1]
polygon = PoolVector2Array( 6, -4, 8, 0, -8, 0, -6, -4 )

[node name="Unit" type="Node2D"]
script = ExtResource( 2 )

[node name="SelectRing" type="Sprite" parent="."]
visible = false
texture = ExtResource( 5 )

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 2 )
position = Vector2( 0, -24 )
texture = ExtResource( 3 )

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
light_mask = 2
occluder = SubResource( 1 )
light_mask = 2

[node name="TeamIcon" type="Polygon2D" parent="."]
position = Vector2( -11, 7 )
polygon = PoolVector2Array( 9, -3, 9, 0, 12, 0, 12, -3 )

[node name="HealthBar" parent="." instance=ExtResource( 4 )]
margin_top = -48.0
margin_bottom = -48.0

[node name="ActionBar" parent="." instance=ExtResource( 1 )]
margin_top = 12.0
margin_bottom = 12.0

[node name="DropShadowSprite" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.564706 )
scale = Vector2( 0.80082, 0.80082 )
texture = ExtResource( 6 )

[node name="Tween" type="Tween" parent="."]

[node name="DamageTween" type="Tween" parent="."]

[node name="DamageNumberProto" type="Node2D" parent="."]
position = Vector2( -9, -58 )
z_index = 3

[node name="Label" type="Label" parent="DamageNumberProto"]
margin_right = 40.0
margin_bottom = 14.0
theme = ExtResource( 8 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_as_outline = 0
text = "-2"
